Fix layout of page if project list is too short.

--- a/c/ruck.css
+++ b/c/ruck.css
@@ -74,8 +74,7 @@ button {
 }
 
 #main {
-	width: 70%;
-	float: left;
+	margin-left: 25%;
 }
 
 #sidebar ul, #contexts {
